update list for Magic Mirror

--- a/HomePage.html
+++ b/HomePage.html
@@ -214,7 +214,7 @@
 				<td>14</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT08/IOT08.html">IOT08</a> -MagicMirror</td>
-				<td>&nbsp;</td>
+				<td>updated 3/12/22</td>
 			</tr>
 
 			<tr>
@@ -228,7 +228,7 @@
 				<td>16</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT10/IOT10.html">IOT10</a>-GrovePi+ Sensor and Actuator System</td>
-				<td>MIS312-updated 3/12/2022</td>
+				<td>MIS312-updated 3/12/22</td>
 			</tr>
 
 			<tr>
