include options for calendar and weather feeds

--- a/IOT08/IOT08.html
+++ b/IOT08/IOT08.html
@@ -397,10 +397,47 @@
 			<p>
 				Congratulations! You have used the RPi to learn to use Magic Mirror, an extensible information kiosk, on a Raspberry Pi single board computer.
 			</p>
+			<p>
+				&nbsp;</p>
 			<hr />
 		</div>
 
+		<div class="col-lg-12 text-success">
+			<h2>Other things to try</h2>
+		</div>
 
+		<div class="col-lg-12 text-success">
+			<h3>Change Calendar Feed</h3>
+		</div>
+
+					<p>
+						<a href="images/CalendarFeed.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/CalendarFeed.PNG', 'popup'); return false;">
+							<img src="images/CalendarFeed.PNG" width="400" alt="calendar feed" class="img-responsive img-responsive" /></a>config file, Calendar Feed<br />
+					</p>
+		<hr />
+
+		<div class="col-lg-12 text-success">
+			<h3>Add Weather Forecast</h3>
+			<hr />
+		</div>
+
+					<p>
+						<a href="images/WeatherForecast.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/WeatherForecast.PNG', 'popup'); return false;">
+							<img src="images/WeatherForecast.PNG" width="400" alt="weather feed" class="img-responsive img-responsive" /></a>config file, Weather Forecast<br />
+					</p>
+
+		<p><code>https://openweathermap.org/</code></p>
+
+					<p>
+						<a href="images/OWKey.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/OWKey.PNG', 'popup'); return false;">
+							<img src="images/OWKey.PNG" width="400" alt="weather feed" class="img-responsive img-responsive" /></a>config file, Open Weather Key<br />
+					</p>
+
+
+					<p>
+						<a href="images/OpenWeatherID.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/OpenWeatherID.PNG', 'popup'); return false;">
+							<img src="images/OpenWeatherID.PNG" width="400" alt="weather ID lookup" class="img-responsive img-responsive" /></a>config file, Open Weather Location ID lookup<br />
+					</p>
 
 
 		<div class="col-lg-12 text-danger text-center">
