updated hyperlinks, added column for new numbering

--- a/HomePage.html
+++ b/HomePage.html
@@ -121,6 +121,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td>&nbsp;</td>
 			</tr>
 
 
@@ -129,6 +130,7 @@
 				<th scope="col">&nbsp;</th>
 				<th scope="col">Assignment</th>
 				<th scope="col">Notes</th>
+				<th scope="col">New Numbers</th>
 			</tr>
 
 			<tr>
@@ -136,33 +138,39 @@
 				<td>&nbsp;</td>
 				<td><a href="IOTP01/IOTP01.html">IOTP01</a> -Raspberry Pi-Setup</td>
 				<td>updated 1/23/2022</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>2</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTP02/IOTP02.html">IOTP02</a> -Raspberry Pi-VNC</td>
 				<td>updated 2/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>3</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTP03/IOTP03.html">IOTP03</a> -Raspberry Pi-SSH</td>
 				<td>updated 2/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>4</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTA01/IOTA01.html">IOTA01</a> -Arduino</td>
 				<td>updated 2/15/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>5</td>
 				<td>&nbsp;</td>
 				<td><a href="IOTB01/IOTB01.html">IOTB01</a> -micro:bit</td>
 				<td>updated 2/15/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>6</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -172,42 +180,49 @@
 				<td>&nbsp;</td>
 				<td><a href="IOT01/IOT01.html">IOT01</a> -WaveMon-Monitor WiFi </td>
 				<td>updated 2/16/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>8</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT02/IOT02.html">IOT02</a> -Apache Webserver</td>
 				<td>updated 2/16/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>9</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT03/IOT03.html">IOT03</a> -Viewing RPi Webserver</td>
 				<td>updated 3/10/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>10</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT04/IOT04.html">IOT04</a> -Zenmap Network Scanner</td>
 				<td>updated 3/10/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>11</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT05/IOT05.html">IOT05</a> -Nagios Network Monitoring</td>
 				<td>updated 3/10/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>12</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT06/IOT06.html">IOT06</a> -RPi Monitor</td>
 				<td>updated 3/10/22</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>13</td>
 				<td>&nbsp;</td>
 				<td><a href="IOT07/IOT07.html">IOT07</a> -MySQL</td>
 				<td>MIS342-updated 3/11/22</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
@@ -215,6 +230,7 @@
 				<td>&nbsp;</td>
 				<td><a href="IOT08/IOT08.html">IOT08</a> -MagicMirror</td>
 				<td>updated 3/12/22</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
@@ -222,6 +238,7 @@
 				<td>&nbsp;</td>
 				<td><a href="IOT09/IOT09.html">IOT09</a>/NR01-Node-RED on RPi </td>
 				<td>MIS202-updated 3/10/22</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
@@ -229,10 +246,12 @@
 				<td>&nbsp;</td>
 				<td><a href="IOT10/IOT10.html">IOT10</a>-GrovePi+ Sensor and Actuator System</td>
 				<td>MIS312-updated 3/12/22</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>17</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -243,6 +262,7 @@
 				<td>&nbsp;</td>
 				<td><a href="IOT09/IOT09.html">NR01</a> -Node-RED on RPi</td>
 				<td>starting/stopping/viewing Node-RED website on :1880</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
@@ -250,6 +270,7 @@
 				<td>&nbsp;</td>
 				<td><a href="NR02/NR02.html">NR02</a>-Node-RED flows</td>
 				<td>creating/importing/exporting a flow-Inject and Debug nodes</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
@@ -257,10 +278,12 @@
 				<td>&nbsp;</td>
 				<td><a href="NR03/NR03.html">NR03</a>-Node_RED sensors</td>
 				<td>create a flow using a sensor and actuator-DHT and LCD-RGB</td>
+				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>21</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -271,70 +294,81 @@
 				<th scope="col">&nbsp;</th>
 				<th scope="col">Assignment</th>
 				<th scope="col">Notes</th>
+				<th scope="col">&nbsp;</th>
 			</tr>
 
 			<tr>
 				<td>22</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative14/Summative14.html">Summative14</a> -xxx</td>
+				<td><a href="Summative14/Summative14.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>23</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative15/Summative15.html">Summative15</a> -xxx</td>
+				<td><a href="Summative15/Summative15.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>24</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative16/Summative16.html">Summative16</a> -xxx</td>
+				<td><a href="Summative16/Summative16.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>25</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative17/Summative17.html">Summative17</a> -xxx</td>
+				<td><a href="Summative17/Summative17.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<td>26</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative18/Summative18.html">Summative18</a> -xxx<br />
+				<td><a href="Summative18/Summative18.html">IOT</a> -xxx<br />
 				</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>27</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative19/Summative19.html">Summative19</a> -xxx</td>
+				<td><a href="Summative19/Summative19.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>28</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative20/Summative20.html">Summative20</a> -xxx</td>
+				<td><a href="Summative20/Summative20.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>29</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative21/Summative21.html">Summative21</a> -xxx</td>
+				<td><a href="Summative21/Summative21.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>30</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative22/Summative22.html">Summative22</a> -xxx</td>
+				<td><a href="Summative22/Summative22.html">IOT</a> -xxx</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 
 			<tr>
 				<td>31</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -345,6 +379,7 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td>&nbsp;</td>
 			</tr>
 
 
@@ -353,11 +388,13 @@
 				<th scope="col">&nbsp;</th>
 				<th scope="col">Assignment</th>
 				<th scope="col">Notes</th>
+				<th scope="col">&nbsp;</th>
 			</tr>
 
 
 
 			<tr class="blockquote-reverse alert-success">
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
