add new Assignment, cloud io

--- a/HomePage.html
+++ b/HomePage.html
@@ -300,8 +300,8 @@
 			<tr>
 				<td>22</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative14/Summative14.html">IOT</a> -xxx</td>
-				<td>&nbsp;</td>
+				<td><a href="Summative14/Summative14.html">IOT11</a> -Adafruit.IO cloud</td>
+				<td>use AdafruitIO_DHT.py with DHT sensor</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
