include instructions to update MagicMirror

--- a/IOT08/IOT08.html
+++ b/IOT08/IOT08.html
@@ -442,6 +442,29 @@
 							<img src="images/OpenWeatherID.PNG" width="400" alt="weather ID lookup" class="img-responsive img-responsive" /></a>config file, Open Weather Location ID lookup<br />
 					</p>
 
+		<hr />
+
+		<div class="col-lg-12 text-success">
+			<h3>Update MagicMirror</h3>
+			<hr />
+		</div>
+
+					<p>
+						<a href="images/Update2.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/Update2.PNG', 'popup'); return false;">
+							<img src="images/Update2.PNG" width="400" alt="update MagicMirror" class="img-responsive img-responsive" /></a>update available message<br />
+					</p>
+
+		<p>Typically entering the command below into your /MagicMirror/ folder will install updates:<br /> 
+			<code>
+				git pull && npm install --only=prod --omit=dev
+			</code>
+		</p>
+
+					<p>If that does not work, study the information at this url:<br />
+						<code>https://docs.magicmirror.builders/getting-started/upgrade-guide.html</code></p>
+
+
+
 
 		<div class="col-lg-12 text-danger text-center">
 			<h2>-- WHEN DONE --<br />
