begin work on cloud data transfer

--- a/HomePage.html
+++ b/HomePage.html
@@ -300,7 +300,7 @@
 			<tr>
 				<td>22</td>
 				<td>&nbsp;</td>
-				<td><a href="Summative14/Summative14.html">IOT11</a> -Adafruit.IO cloud</td>
+				<td><a href="IOT11/IOT11.html">IOT11</a> -Adafruit.IO cloud</td>
 				<td>use AdafruitIO_DHT.py with DHT sensor</td>
 				<td>&nbsp;</td>
 			</tr>
